# cori.data.api

./: .Rbuildignore  .env.mf-dev  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .nojekyll  .prettierignore  .prettierrc  DESCRIPTION  LICENSE  LICENSE.md  LOCAL.md  NAMESPACE  README.md  README.qmd  _quarto.yml  about.html  about.qmd  api-spec-1.0.0.yml  api-spec.yml  buildPythonDependencyLayer.sh  env.json  index.html  index.js  index.md  index.qmd  invoke.sh  jest.config.cjs  jest.config.ts  package-lock.json  package.json  postman.collection.json  robots.txt  rollup.config.js  run-swagger.sh  runLocalApi.sh  search.json  sitemap.xml  (+5 more)
R/: README.qmd  (+1 more)
python-microservices/: README.rst  pyproject.toml
python-microservices/acs/: acs_config.py  acs_connection.py  index.py  pyproject.toml
python-microservices/bcat/: bcat_config.py  database_changes.sql  index.py  pyproject.toml  requirements.txt  test_bcat_geojson_api.robot  test_bcat_spatial_api.robot  test_mvt.robot
python-microservices/bcat/auction_904_subsidy_awards/: index.py
python-microservices/bcatclone/: database_changes.sql  index.py  pyproject.toml  test_mvt.robot  tests.sh
python-microservices/deploy/: index.py  pyproject.toml
python-microservices/lambda-dependency-layer/: pyproject.toml
python-microservices/lambdas/: index.py
python-microservices/lee-service/: index.py  pyproject.toml  test_scaffold.robot
python-microservices/local/: bcat_config.py  bcat_connection.py  index.py  log.html  output.xml  pyproject.toml  report.html  requirements.txt  test_bcat_geojson_api.robot  test_bcat_geojson_defensive.robot  test_bcat_spatial_api.robot  test_mvt.robot  test_suite.robot  tests.sh
python-microservices/scaffolding/: index.py  tests.sh
python-microservices/testApi/: event.json  pyproject.toml  requirements.txt
python-microservices/tests/: test_python_microservices.py
(+195 files in other folders)
