[tool.poetry]
name = "python-microservices"
version = "0.1.0"
description = "Python Lambdas for REST API"
authors = ["Merging Futures LLC."]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "1.25.7"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
