[tool.poetry]
name = "lambda-dependency-layer"
version = "0.1.0"
description = ""
authors = ["Nahum <nahum@mergingfutures.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "^1.25.9"
psycopg = "^3.0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
