[tool.poetry]
name = "local-api"
version = "0.1.0"
description = ""
authors = ["Merging Futures LLC."]

[tool.poetry.dependencies]
python = "^3.8"
psycopg = "^3.0.14"
psycopg-binary = "^3.0.14"
aws-lambda-powertools = "^1.26.0"

[tool.poetry.dev-dependencies]
robotframework-requests = "^0.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
