[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Merging Futures LLC."]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "1.25.7"
python-json-logger = "^2.0.2"
psycopg = "^3.0.11"
psycopg-binary = "^3.0.11"
boto3 = "^1.21.46"
python-lambda-local = "^0.1.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
